--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "2.0.4",
     "com.unity.feature.development": "1.0.2",
     "com.unity.feature.vr": "1.0.1",
     "com.unity.probuilder": "5.2.3",
